[B]2.0.2.1[/B]
-Bugfix whatsnew

[B]2.0.2[/B]
- Add News und Updates Anzeige
- Update TMDB Key

[B]2.0.1[/B]
- Serienstream hinzugefügt, Fix Login Problem

[B]2.0.0[/B]
- Aufteilung von plugin.video.lastship in 2 Module:
  script.module.lastship
  plugin.video.lasthip
- settings Anpassung an die neue Aufteilung
- string.po Anpassung (alles im/ab 32700 Kreis ist Lastship spezifisch)
  
[B]1.2.6.1[/B]
- Settings Fix (tata, stream.to und streamdream entfernt)

[B]1.2.6[/B]
- Irreführende/Falsche Anzeige bei der Streamsuche behoben (Danke petemei)
- Gesamtanzahl der Streams während der Suche anzeigen (Danke petemei)
- Fix IMDB, funktioniert nur für User Listen, also eigene oder fremde oeffentliche ID, nicht für die Watchlist (Danke petemei)
- tata entfernt (aktuell keine Filme und Serien mehr)
- stream.to entfernt (verwendet reCaptcha)
- streamdream entfernt (verwednet FileCrypt)

[B]1.2.5[/B]
- Die Farbe für Premium-Links kann in den Einstellungen, vom User, angepasst werden (Danke petemei)
- Einstellung, für Englische und Englisch_Deutsche Sprache, entfernt
- Fix Seriesever (aber leider ohne RealDebrid), Danke philps
- Fix Foxx (Danke philps)

[B]1.2.4[/B]
- Update foxx (script.module.requests erforderlich, wird automatisch mit installiert)
- Update source.py (Beim Durchsuchen der Index Seiten wird jetzt auch angezeigt, welche Stream Auflösungen zur Verfügung stehen)
- Lichtspielhaus & Moviesever entfernt, Homepage down
- Streamflix entfernt, hat einen neue Domain (streamflix.ru)
- kinos.to als zusätzliche Domain in der kinox.py hinzugefügt
- Englische Index Seiten entfernt 

[B]1.2.3[/B]
- Beim Hinzufügen neuer Episoden zur Library wird eine bereits vorhandene "tvshow.nfo" nicht mehr überschrieben
- Neu gesendete Episoden können sofort zur Library hinzugefügt werden (nicht erst 1 Tag später)
- Datumsaktualisierung im Hintergrund bei Auto-Import von Episoden
- Exuary kann als Erscheinungsbild ausgewählt werden