@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.lastship" version="2.0.2.1" name="Lastship" provider-name="Lastship">
+<addon id="plugin.video.lastship" version="2.0.3~nightly5" name="Lastship" provider-name="Lastship">
 	<requires>
 		<import addon="xbmc.python" version="2.19.0" />
 		<import addon="repository.lastship" version="1.0.1" />
@@ -30,6 +30,6 @@
     			<screenshot>resources/screenshots/screenshot-02.jpg</screenshot>
     			<screenshot>resources/screenshots/screenshot-03.jpg</screenshot>
 		</assets>
-		<news>Bug Fix whatsnew</news>
+		<news>- Add Trakt Collections AutoSync</news>
 	</extension>
 </addon>
