@@ -24,22 +24,40 @@
 
 from resources.lib.modules import log_utils
 from resources.lib.modules import control
+import threading
 
 control.execute('RunPlugin(plugin://%s)' % control.get_plugin_url({'action': 'service'}))
+
+def syncTraktLibrary():
+    control.execute(
+        'RunPlugin(plugin://%s)' % 'plugin.video.lastship/?action=tvshowsToLibrarySilent&url=traktcollection')
+    control.execute(
+        'RunPlugin(plugin://%s)' % 'plugin.video.lastship/?action=moviesToLibrarySilent&url=traktcollection')
 
 try:
     ModuleVersion = control.addon('script.module.lastship').getAddonInfo('version')
     AddonVersion = control.addon('plugin.video.lastship').getAddonInfo('version')
-    RepoVersion = control.addon('repository.lastship').getAddonInfo('version')
+    #RepoVersion = control.addon('repository.colossus').getAddonInfo('version')
 
-    log_utils.log('######################### lastship ############################', log_utils.LOGNOTICE)
-    log_utils.log('####### CURRENT lastship VERSIONS REPORT ######################', log_utils.LOGNOTICE)
-    log_utils.log('### lastship PLUGIN VERSION: %s ###' % str(AddonVersion), log_utils.LOGNOTICE)
-    log_utils.log('### lastship SCRIPT VERSION: %s ###' % str(ModuleVersion), log_utils.LOGNOTICE)
-    log_utils.log('### lastship REPOSITORY VERSION: %s ###' % str(RepoVersion), log_utils.LOGNOTICE)
+    log_utils.log('######################### LASTSHIP ############################', log_utils.LOGNOTICE)
+    log_utils.log('####### CURRENT LASTSHIP VERSIONS REPORT ######################', log_utils.LOGNOTICE)
+    log_utils.log('### LASTSHIP PLUGIN VERSION: %s ###' % str(AddonVersion), log_utils.LOGNOTICE)
+    log_utils.log('### LASTSHIP SCRIPT VERSION: %s ###' % str(ModuleVersion), log_utils.LOGNOTICE)
+    #log_utils.log('### LASTSHIP REPOSITORY VERSION: %s ###' % str(RepoVersion), log_utils.LOGNOTICE)
     log_utils.log('###############################################################', log_utils.LOGNOTICE)
 except:
-    log_utils.log('######################### lastship ############################', log_utils.LOGNOTICE)
-    log_utils.log('####### CURRENT lastship VERSIONS REPORT ######################', log_utils.LOGNOTICE)
-    log_utils.log('### ERROR GETTING lastship VERSIONS - NO HELP WILL BE GIVEN AS THIS IS NOT AN OFFICIAL lastship INSTALL. ###', log_utils.LOGNOTICE)
+    log_utils.log('######################### LASTSHIP ############################', log_utils.LOGNOTICE)
+    log_utils.log('####### CURRENT LASTSHIP VERSIONS REPORT ######################', log_utils.LOGNOTICE)
+    log_utils.log('### ERROR GETTING LASTSHIP VERSIONS - NO HELP WILL BE GIVEN AS THIS IS NOT AN OFFICIAL LASTSHIP INSTALL. ###', log_utils.LOGNOTICE)
     log_utils.log('###############################################################', log_utils.LOGNOTICE)
+
+if control.setting('autoTraktOnStart') == 'true':
+    syncTraktLibrary()
+
+if int(control.setting('schedTraktTime')) > 0:
+    log_utils.log('###############################################################', log_utils.LOGNOTICE)
+    log_utils.log('#################### STARTING TRAKT SCHEDULING ################', log_utils.LOGNOTICE)
+    log_utils.log('#################### SCHEDULED TIME FRAME '+ control.setting('schedTraktTime')  + ' HOURS ################', log_utils.LOGNOTICE)
+    timeout = 3600 * int(control.setting('schedTraktTime'))
+    schedTrakt = threading.Timer(timeout, syncTraktLibrary)
+    schedTrakt.start()
